# Quiz_LLM

./: .env  README.md  pyproject.toml
scr/: .gitignore  app.py  makefile  rag.py
scr/chroma_db/: chroma.sqlite3
